# Jarvis

./: .gitignore  availableFunctions.py  functionsSchema.json  main.py  prompts.py  pyproject.toml
functions/: get_files_info.py  run_files.py  write_files_content.py
tests/: test_get_files_content.py  test_get_files_info.py  test_run_files.py  test_write_files_content.py
