[project]
name = "ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "groq>=1.0.0",
    "python-dotenv>=1.2.1",
]

[project.scripts]
Jarvis = "main:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
py-modules = ["main", "availableFunctions", "prompts"]